project(hyperbot LANGUAGES CXX C)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")

if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
  add_definitions(-D_WIN32_WINNT=0x0501)
endif()

# Include Boost
set(Boost_USE_STATIC_LIBS ON)
find_package(Boost 1.67.0 REQUIRED COMPONENTS thread regex)
include_directories(${Boost_INCLUDE_DIRS})

include(FindProtobuf)

find_package(cppzmq CONFIG REQUIRED)

add_executable(${PROJECT_NAME}
  src/bot.cpp
  src/bot.hpp
  src/broker/eventBroker.cpp
  src/broker/eventBroker.hpp
  src/broker/packetBroker.cpp
  src/broker/packetBroker.hpp
  src/broker/timerManager.cpp
  src/broker/timerManager.hpp
  src/characterLoginInfo.hpp
  src/clientManagerInterface.cpp
  src/clientManagerInterface.hpp
  src/config/characterConfig.cpp
  src/config/characterConfig.hpp
  src/config/serverConfig.cpp
  src/config/serverConfig.hpp
  src/entity/character.cpp
  src/entity/character.hpp
  src/entity/entity.cpp
  src/entity/entity.hpp
  src/entity/geometry.cpp
  src/entity/geometry.hpp
  src/entity/item.cpp
  src/entity/item.hpp
  src/entity/mobileEntity.cpp
  src/entity/mobileEntity.hpp
  src/entity/monster.cpp
  src/entity/monster.hpp
  src/entity/nonplayerCharacter.cpp
  src/entity/nonplayerCharacter.hpp
  src/entity/playerCharacter.cpp
  src/entity/playerCharacter.hpp
  src/entity/portal.cpp
  src/entity/portal.hpp
  src/entity/self.cpp
  src/entity/self.hpp
  src/event/event.cpp
  src/event/event.hpp
  src/helpers.cpp
  src/helpers.hpp
  src/hyperbot.cpp
  src/hyperbot.hpp
  src/loader.cpp
  src/loader.hpp
  src/main.cpp
  src/math/pointTranslator.cpp
  src/math/pointTranslator.hpp
  src/packet/building/clientAgentActionCommandRequest.cpp
  src/packet/building/clientAgentActionCommandRequest.hpp
  src/packet/building/clientAgentActionDeselectRequest.cpp
  src/packet/building/clientAgentActionDeselectRequest.hpp
  src/packet/building/clientAgentActionSelectRequest.cpp
  src/packet/building/clientAgentActionSelectRequest.hpp
  src/packet/building/clientAgentActionTalkRequest.cpp
  src/packet/building/clientAgentActionTalkRequest.hpp
  src/packet/building/clientAgentAlchemyElixirRequest.cpp
  src/packet/building/clientAgentAlchemyElixirRequest.hpp
  src/packet/building/clientAgentAlchemyStoneRequest.cpp
  src/packet/building/clientAgentAlchemyStoneRequest.hpp
  src/packet/building/clientAgentAuthRequest.cpp
  src/packet/building/clientAgentAuthRequest.hpp
  src/packet/building/clientAgentCharacterIncreaseIntRequest.cpp
  src/packet/building/clientAgentCharacterIncreaseIntRequest.hpp
  src/packet/building/clientAgentCharacterIncreaseStrRequest.cpp
  src/packet/building/clientAgentCharacterIncreaseStrRequest.hpp
  src/packet/building/clientAgentCharacterMoveRequest.cpp
  src/packet/building/clientAgentCharacterMoveRequest.hpp
  src/packet/building/clientAgentCharacterResurrect.cpp
  src/packet/building/clientAgentCharacterResurrect.hpp
  src/packet/building/clientAgentCharacterSelectionActionRequest.cpp
  src/packet/building/clientAgentCharacterSelectionActionRequest.hpp
  src/packet/building/clientAgentCharacterSelectionJoinRequest.cpp
  src/packet/building/clientAgentCharacterSelectionJoinRequest.hpp
  src/packet/building/clientAgentCharacterUpdateBodyStateRequest.cpp
  src/packet/building/clientAgentCharacterUpdateBodyStateRequest.hpp
  src/packet/building/clientAgentCosCommandRequest.cpp
  src/packet/building/clientAgentCosCommandRequest.hpp
  src/packet/building/clientAgentFreePvpUpdateRequest.cpp
  src/packet/building/clientAgentFreePvpUpdateRequest.hpp
  src/packet/building/clientAgentInventoryItemUseRequest.cpp
  src/packet/building/clientAgentInventoryItemUseRequest.hpp
  src/packet/building/clientAgentInventoryOperationRequest.cpp
  src/packet/building/clientAgentInventoryOperationRequest.hpp
  src/packet/building/clientAgentInventoryRepairRequest.cpp
  src/packet/building/clientAgentInventoryRepairRequest.hpp
  src/packet/building/clientAgentInventoryStorageOpenRequest.cpp
  src/packet/building/clientAgentInventoryStorageOpenRequest.hpp
  src/packet/building/clientAgentOperatorRequest.cpp
  src/packet/building/clientAgentOperatorRequest.hpp
  src/packet/building/clientAgentSkillLearnRequest.cpp
  src/packet/building/clientAgentSkillLearnRequest.hpp
  src/packet/building/clientAgentSkillMasteryLearnRequest.cpp
  src/packet/building/clientAgentSkillMasteryLearnRequest.hpp
  src/packet/building/clientGatewayLoginIbuvAnswer.cpp
  src/packet/building/clientGatewayLoginIbuvAnswer.hpp
  src/packet/building/clientGatewayLoginRequest.cpp
  src/packet/building/clientGatewayLoginRequest.hpp
  src/packet/building/clientGatewayShardListRequest.cpp
  src/packet/building/clientGatewayShardListRequest.hpp
  src/packet/building/commonBuilding.cpp
  src/packet/building/commonBuilding.hpp
  src/packet/building/serverAgentChatUpdate.cpp
  src/packet/building/serverAgentChatUpdate.hpp
  src/packet/building/serverAgentEntityDespawn.cpp
  src/packet/building/serverAgentEntityDespawn.hpp
  src/packet/building/serverAgentEntitySpawn.cpp
  src/packet/building/serverAgentEntitySpawn.hpp
  src/packet/building/serverAgentEntityUpdateState.cpp
  src/packet/building/serverAgentEntityUpdateState.hpp
  src/packet/building/serverAgentInventoryOperationResponse.cpp
  src/packet/building/serverAgentInventoryOperationResponse.hpp
  src/packet/building/serverAgentSkillBegin.cpp
  src/packet/building/serverAgentSkillBegin.hpp
  src/packet/building/serverAgentSkillEnd.cpp
  src/packet/building/serverAgentSkillEnd.hpp
  src/packet/enums/packetEnums.cpp
  src/packet/enums/packetEnums.hpp
  src/packet/opcode.cpp
  src/packet/opcode.hpp
  src/packet/parsing/clientAgentActionCommandRequest.cpp
  src/packet/parsing/clientAgentActionCommandRequest.hpp
  src/packet/parsing/clientAgentActionDeselectRequest.cpp
  src/packet/parsing/clientAgentActionDeselectRequest.hpp
  src/packet/parsing/clientAgentActionSelectRequest.cpp
  src/packet/parsing/clientAgentActionSelectRequest.hpp
  src/packet/parsing/clientAgentActionTalkRequest.cpp
  src/packet/parsing/clientAgentActionTalkRequest.hpp
  src/packet/parsing/clientAgentCharacterMoveRequest.cpp
  src/packet/parsing/clientAgentCharacterMoveRequest.hpp
  src/packet/parsing/clientAgentChatRequest.cpp
  src/packet/parsing/clientAgentChatRequest.hpp
  src/packet/parsing/clientAgentInventoryItemUseRequest.cpp
  src/packet/parsing/clientAgentInventoryItemUseRequest.hpp
  src/packet/parsing/commonParsing.cpp
  src/packet/parsing/commonParsing.hpp
  src/packet/parsing/frameworkMessageIdentify.cpp
  src/packet/parsing/frameworkMessageIdentify.hpp
  src/packet/parsing/packetParser.cpp
  src/packet/parsing/packetParser.hpp
  src/packet/parsing/parsedPacket.cpp
  src/packet/parsing/parsedPacket.hpp
  src/packet/parsing/serverAgentActionCommandResponse.cpp
  src/packet/parsing/serverAgentActionCommandResponse.hpp
  src/packet/parsing/serverAgentActionDeselectResponse.cpp
  src/packet/parsing/serverAgentActionDeselectResponse.hpp
  src/packet/parsing/serverAgentActionSelectResponse.cpp
  src/packet/parsing/serverAgentActionSelectResponse.hpp
  src/packet/parsing/serverAgentActionTalkResponse.cpp
  src/packet/parsing/serverAgentActionTalkResponse.hpp
  src/packet/parsing/serverAgentAlchemyElixirResponse.cpp
  src/packet/parsing/serverAgentAlchemyElixirResponse.hpp
  src/packet/parsing/serverAgentAlchemyStoneResponse.cpp
  src/packet/parsing/serverAgentAlchemyStoneResponse.hpp
  src/packet/parsing/serverAgentAuthResponse.cpp
  src/packet/parsing/serverAgentAuthResponse.hpp
  src/packet/parsing/serverAgentBuffAdd.cpp
  src/packet/parsing/serverAgentBuffAdd.hpp
  src/packet/parsing/serverAgentBuffLink.cpp
  src/packet/parsing/serverAgentBuffLink.hpp
  src/packet/parsing/serverAgentBuffRemove.cpp
  src/packet/parsing/serverAgentBuffRemove.hpp
  src/packet/parsing/serverAgentCharacterData.cpp
  src/packet/parsing/serverAgentCharacterData.hpp
  src/packet/parsing/serverAgentCharacterIncreaseIntResponse.cpp
  src/packet/parsing/serverAgentCharacterIncreaseIntResponse.hpp
  src/packet/parsing/serverAgentCharacterIncreaseStrResponse.cpp
  src/packet/parsing/serverAgentCharacterIncreaseStrResponse.hpp
  src/packet/parsing/serverAgentCharacterSelectionActionResponse.cpp
  src/packet/parsing/serverAgentCharacterSelectionActionResponse.hpp
  src/packet/parsing/serverAgentCharacterSelectionJoinResponse.cpp
  src/packet/parsing/serverAgentCharacterSelectionJoinResponse.hpp
  src/packet/parsing/serverAgentCharacterUpdateStats.cpp
  src/packet/parsing/serverAgentCharacterUpdateStats.hpp
  src/packet/parsing/serverAgentChatUpdate.cpp
  src/packet/parsing/serverAgentChatUpdate.hpp
  src/packet/parsing/serverAgentCosData.cpp
  src/packet/parsing/serverAgentCosData.hpp
  src/packet/parsing/serverAgentEntityDamageEffect.cpp
  src/packet/parsing/serverAgentEntityDamageEffect.hpp
  src/packet/parsing/serverAgentEntityDespawn.cpp
  src/packet/parsing/serverAgentEntityDespawn.hpp
  src/packet/parsing/serverAgentEntityGroupSpawnData.cpp
  src/packet/parsing/serverAgentEntityGroupSpawnData.hpp
  src/packet/parsing/serverAgentEntityRemoveOwnership.cpp
  src/packet/parsing/serverAgentEntityRemoveOwnership.hpp
  src/packet/parsing/serverAgentEntitySpawn.cpp
  src/packet/parsing/serverAgentEntitySpawn.hpp
  src/packet/parsing/serverAgentEntitySyncPosition.cpp
  src/packet/parsing/serverAgentEntitySyncPosition.cpp
  src/packet/parsing/serverAgentEntityUpdateAngle.cpp
  src/packet/parsing/serverAgentEntityUpdateAngle.hpp
  src/packet/parsing/serverAgentEntityUpdateExperience.cpp
  src/packet/parsing/serverAgentEntityUpdateExperience.hpp
  src/packet/parsing/serverAgentEntityUpdateHwanLevel.cpp
  src/packet/parsing/serverAgentEntityUpdateHwanLevel.hpp
  src/packet/parsing/serverAgentEntityUpdateMovement.cpp
  src/packet/parsing/serverAgentEntityUpdateMovement.hpp
  src/packet/parsing/serverAgentEntityUpdateMoveSpeed.cpp
  src/packet/parsing/serverAgentEntityUpdateMoveSpeed.hpp
  src/packet/parsing/serverAgentEntityUpdatePoints.cpp
  src/packet/parsing/serverAgentEntityUpdatePoints.hpp
  src/packet/parsing/serverAgentEntityUpdatePosition.cpp
  src/packet/parsing/serverAgentEntityUpdatePosition.hpp
  src/packet/parsing/serverAgentEntityUpdateState.cpp
  src/packet/parsing/serverAgentEntityUpdateState.hpp
  src/packet/parsing/serverAgentEntityUpdateStatus.cpp
  src/packet/parsing/serverAgentEntityUpdateStatus.hpp
  src/packet/parsing/serverAgentFreePvpUpdateResponse.cpp
  src/packet/parsing/serverAgentFreePvpUpdateResponse.hpp
  src/packet/parsing/serverAgentGameReset.cpp
  src/packet/parsing/serverAgentGameReset.hpp
  src/packet/parsing/serverAgentGuildStorageData.cpp
  src/packet/parsing/serverAgentGuildStorageData.hpp
  src/packet/parsing/serverAgentInventoryEquipCountdownStart.cpp
  src/packet/parsing/serverAgentInventoryEquipCountdownStart.hpp
  src/packet/parsing/serverAgentInventoryItemUseResponse.cpp
  src/packet/parsing/serverAgentInventoryItemUseResponse.hpp
  src/packet/parsing/serverAgentInventoryOperationResponse.cpp
  src/packet/parsing/serverAgentInventoryOperationResponse.hpp
  src/packet/parsing/serverAgentInventoryRepairResponse.cpp
  src/packet/parsing/serverAgentInventoryRepairResponse.hpp
  src/packet/parsing/serverAgentInventoryStorageData.cpp
  src/packet/parsing/serverAgentInventoryStorageData.hpp
  src/packet/parsing/serverAgentInventoryUpdateDurability.cpp
  src/packet/parsing/serverAgentInventoryUpdateDurability.hpp
  src/packet/parsing/serverAgentInventoryUpdateItem.cpp
  src/packet/parsing/serverAgentInventoryUpdateItem.hpp
  src/packet/parsing/serverAgentOperatorResponse.cpp
  src/packet/parsing/serverAgentOperatorResponse.hpp
  src/packet/parsing/serverAgentResurrectOption.cpp
  src/packet/parsing/serverAgentResurrectOption.hpp
  src/packet/parsing/serverAgentSkillBegin.cpp
  src/packet/parsing/serverAgentSkillBegin.hpp
  src/packet/parsing/serverAgentSkillEnd.cpp
  src/packet/parsing/serverAgentSkillEnd.hpp
  src/packet/parsing/serverAgentSkillLearnResponse.cpp
  src/packet/parsing/serverAgentSkillLearnResponse.hpp
  src/packet/parsing/serverAgentSkillMasteryLearnResponse.cpp
  src/packet/parsing/serverAgentSkillMasteryLearnResponse.hpp
  src/packet/parsing/serverGatewayLoginIbuvChallenge.cpp
  src/packet/parsing/serverGatewayLoginIbuvChallenge.hpp
  src/packet/parsing/serverGatewayLoginResponse.cpp
  src/packet/parsing/serverGatewayLoginResponse.hpp
  src/packet/parsing/serverGatewayPatchResponse.cpp
  src/packet/parsing/serverGatewayPatchResponse.hpp
  src/packet/parsing/serverGatewayShardListResponse.cpp
  src/packet/parsing/serverGatewayShardListResponse.hpp
  src/packet/structures/packetInnerStructures.hpp
  src/packetLogger.cpp
  src/packetLogger.hpp
  src/packetProcessor.cpp
  src/packetProcessor.hpp
  src/pk2/characterData.cpp
  src/pk2/characterData.hpp
  src/pk2/gameData.cpp
  src/pk2/gameData.hpp
  src/pk2/itemData.cpp
  src/pk2/itemData.hpp
  src/pk2/levelData.cpp
  src/pk2/levelData.hpp
  src/pk2/magicOptionData.cpp
  src/pk2/magicOptionData.hpp
  src/pk2/masteryData.cpp
  src/pk2/masteryData.hpp
  src/pk2/refRegion.cpp
  src/pk2/refRegion.hpp
  src/pk2/shopData.cpp
  src/pk2/shopData.hpp
  src/pk2/skillData.cpp
  src/pk2/skillData.hpp
  src/pk2/teleportData.cpp
  src/pk2/teleportData.hpp
  src/pk2/textData.cpp
  src/pk2/textData.hpp
  src/pk2/textZoneNameData.cpp
  src/pk2/textZoneNameData.hpp
  src/proto_convert/convert.cpp
  src/proto_convert/convert.hpp
  src/proxy.cpp
  src/proxy.hpp
  src/rl/ai/baseIntelligence.cpp
  src/rl/ai/baseIntelligence.hpp
  src/rl/ai/randomIntelligence.cpp
  src/rl/ai/randomIntelligence.hpp
  src/rl/rlTrainingManager.cpp
  src/rl/rlTrainingManager.hpp
  src/session.cpp
  src/session.hpp
  src/sessionId.hpp
  src/shared/silkroad_security.cpp
  src/shared/silkroad_security.h
  src/shared/stream_utility.cpp
  src/shared/stream_utility.h
  src/silkroadConnection.cpp
  src/silkroadConnection.hpp
  src/statAggregator.cpp
  src/statAggregator.hpp
  src/state/entityTracker.cpp
  src/state/entityTracker.hpp
  src/state/machine/alchemy.cpp
  src/state/machine/alchemy.hpp
  src/state/machine/applyStatPoints.cpp
  src/state/machine/applyStatPoints.hpp
  src/state/machine/autoPotion.cpp
  src/state/machine/autoPotion.hpp
  src/state/machine/botting.cpp
  src/state/machine/botting.hpp
  src/state/machine/buyingItems.cpp
  src/state/machine/buyingItems.hpp
  src/state/machine/castSkill.cpp
  src/state/machine/castSkill.hpp
  src/state/machine/concurrentStateMachines.cpp
  src/state/machine/concurrentStateMachines.hpp
  src/state/machine/disableGmInvisible.cpp
  src/state/machine/disableGmInvisible.hpp
  src/state/machine/dropItem.cpp
  src/state/machine/dropItem.hpp
  src/state/machine/enablePvpMode.cpp
  src/state/machine/enablePvpMode.hpp
  src/state/machine/executeGmCommand.cpp
  src/state/machine/executeGmCommand.hpp
  src/state/machine/gmCommandSpawnAndPickItems.cpp
  src/state/machine/gmCommandSpawnAndPickItems.hpp
  src/state/machine/login.cpp
  src/state/machine/login.hpp
  src/state/machine/maxMasteryAndSkills.cpp
  src/state/machine/maxMasteryAndSkills.hpp
  src/state/machine/moveItemInInventory.cpp
  src/state/machine/moveItemInInventory.hpp
  src/state/machine/pickItem.cpp
  src/state/machine/pickItem.hpp
  src/state/machine/pickItemWithCos.cpp
  src/state/machine/pickItemWithCos.hpp
  src/state/machine/sellingItems.cpp
  src/state/machine/sellingItems.hpp
  src/state/machine/sequentialStateMachines.cpp
  src/state/machine/sequentialStateMachines.hpp
  src/state/machine/stateMachine.cpp
  src/state/machine/stateMachine.hpp
  src/state/machine/talkingToShopNpc.cpp
  src/state/machine/talkingToShopNpc.hpp
  src/state/machine/talkingToStorageNpc.cpp
  src/state/machine/talkingToStorageNpc.hpp
  src/state/machine/townlooping.cpp
  src/state/machine/townlooping.hpp
  src/state/machine/training.cpp
  src/state/machine/training.hpp
  src/state/machine/useItem.cpp
  src/state/machine/useItem.hpp
  src/state/machine/useReturnScroll.cpp
  src/state/machine/useReturnScroll.hpp
  src/state/machine/walking.cpp
  src/state/machine/walking.hpp
  src/state/skillEngine.cpp
  src/state/skillEngine.hpp
  src/state/worldState.cpp
  src/state/worldState.hpp
  src/storage/buybackQueue.cpp
  src/storage/buybackQueue.hpp
  src/storage/item.cpp
  src/storage/item.hpp
  src/storage/itemList.cpp
  src/storage/itemList.hpp
  src/storage/storage.cpp
  src/storage/storage.hpp
  src/type_id/categories.cpp
  src/type_id/categories.hpp
  src/type_id/typeCategory.cpp
  src/type_id/typeCategory.hpp
  src/ui/userInterface.cpp
  src/ui/userInterface.hpp
)

if (MSVC)
  target_compile_options(${PROJECT_NAME} PRIVATE
    /FS
  )
endif()



target_include_directories(${PROJECT_NAME} PRIVATE
  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>/src"
  "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>/src"
)

target_link_libraries(${PROJECT_NAME} PRIVATE
  ${Boost_LIBRARIES}
  Pathfinder
  ui_proto
  cppzmq
  silkroad_lib
  absl::flags
  absl::flags_parse
)

# ==============================================================================
# =================================== Tests ====================================
# ==============================================================================

enable_testing()

add_executable(
  new_test_name_todo_rename
  test/singleRegionNavmeshTriangulationTest.cpp
)

target_link_libraries(
  new_test_name_todo_rename
  Pathfinder
  silkroad_lib
  GTest::Main
)

target_include_directories(new_test_name_todo_rename PRIVATE
  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>/src"
  "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>/src"
)

include(GoogleTest)
gtest_discover_tests(new_test_name_todo_rename
# WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
)